--- a/Game/index.html
+++ b/Game/index.html
@@ -96,9 +96,12 @@
     <script src="js/core/AssetLoader.js"></script>
     <script src="js/audio/AudioManager.js"></script>
     <script src="js/core/StateManager.js"></script>
+    <script src="js/physics/PhysicsEngine.js"></script>
+    <script src="js/core/Camera.js"></script>
     <script src="js/data/worlds.js"></script>
     <script src="js/screens/WorldSelect.js"></script>
     <script src="js/screens/WorldMap.js"></script>
+    <script src="js/screens/Level.js"></script>
     <script src="js/core/GameCore.js"></script>
 
     <!-- Initialize Game -->
