--- a/Game/index.html
+++ b/Game/index.html
@@ -99,6 +99,7 @@
     <script src="js/physics/PhysicsEngine.js"></script>
     <script src="js/core/Camera.js"></script>
     <script src="js/data/worlds.js"></script>
+    <script src="js/data/levels.js"></script>
     <script src="js/screens/WorldSelect.js"></script>
     <script src="js/screens/WorldMap.js"></script>
     <script src="js/screens/Level.js"></script>
